2003-03-09  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCglobl.h: PATH_MAX is already defined in mingw32 headers

2003-03-09  Borut Razem <borut.razem@siol.net>

	* src/SDCCglue.c: re-implemented tempfilename() and tempfile(): using mkstemp() if available
	* src/SDCCsymt.h: fixed MSVC and BORLANDC compilation (included SDCCglobl.h instead srccconf.h)
	* sdcc_vc_in.h: explicitly undefined HAVE_MKSTEMP which is not available on BORLANDC and MSVC
	* src/SDCCset.h: removed inclusion of sdccconf.h or sdcc_vc.h
	* src/SDCCglobl.h: unification of WIN32 native definitions

2003-03-09  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c: applied in-/dec patch mentioned on sdcc-devel 2003-03-01

2003-03-08  Bernhard Held <bernhard@bernhardheld.de>

	* src/configure.in:   check for endianess (even while cross-compiling)
	* src/configure:      check for endianess (even while cross-compiling)
	* src/configure_in.h: check for endianess (even while cross-compiling)
	* src/avr/gen.c:        remove old endianess stuff
	* src/mcs51/gen.c:      remove old endianess stuff
	* src/ds390/gen.c:      remove old endianess stuff
	* src/pic/gen.c:        remove old endianess stuff
	* src/pic/genarith.c:   remove old endianess stuff
	* src/pic/glue.c:       fix endianess check
	* src/pic16/gen.c:      remove old endianess stuff
	* src/pic16/genarith.c: remove old endianess stuff
	* src/pic16/glue.c:     fix endianess check
	* src/xa51/gen.c:       remove old endianess stuff
	* src/z80/gen.c:        fix endianess check
	* src/SDCCglue.c:       fix endianess check
	* src/ds390/peeph.def: fix bug 700036

2003-03-08  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCsymt.h: use appropriate data-types on host for SDCC's int and long
	* src/configure: find appropriate data-types on host for SDCC's int and long
	* src/configure.in: find appropriate data-types on host for SDCC's int and long
	* src/sdccconf_in.h: find appropriate data-types on host for SDCC's int and long